WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63521
Web Inspector: console.group messages should never be coalesced
https://bugs.webkit.org/show_bug.cgi?id=63521
Summary
Web Inspector: console.group messages should never be coalesced
Yury Semikhatsky
Reported
2011-06-28 02:07:18 PDT
Now if you call console.group("group name") in a cycle all messages will be coalesced and only one group will be started.
Attachments
Patch
(5.08 KB, patch)
2011-06-28 02:14 PDT
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
Patch
(5.67 KB, patch)
2011-06-28 02:19 PDT
,
Yury Semikhatsky
pfeldman
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2011-06-28 02:14:05 PDT
Created
attachment 98884
[details]
Patch
Yury Semikhatsky
Comment 2
2011-06-28 02:19:56 PDT
Created
attachment 98885
[details]
Patch
Yury Semikhatsky
Comment 3
2011-06-28 02:28:42 PDT
Committed
r89912
: <
http://trac.webkit.org/changeset/89912
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug