2011-06-28  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: console.group messages should never be coalesced
        https://bugs.webkit.org/show_bug.cgi?id=63521

        * inspector/console/console-nested-group-expected.txt:
        * inspector/console/console-nested-group.html:
2011-06-28  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: console.group messages should never be coalesced
        https://bugs.webkit.org/show_bug.cgi?id=63521

        * inspector/InspectorConsoleAgent.cpp:
        (WebCore::isGroupMessage):
        (WebCore::InspectorConsoleAgent::addConsoleMessage):

Canonical link: https://commits.webkit.org/79198@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89912 268f45cc-cd09-0410-ab3c-d52691b4dbfc